--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
-    # below is the key vlue
+    # below is the key value
+
+api_key = 435de503e096f818482869dd7c6a1910
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/console
+spring.datasource.platform=h2
+
+# Enables spring mvc's ability to use HTTP DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
+
+# Define a file to use to save database instead of relying on in-memory
+# If file doesn't exist, app will create it
+spring.datasource.url = jdbc:h2:file:~/weather
+# When server is started, this makes the H2 database automatically update
+# to match the schema found in the external file
+# ddl stands for data definition language
+spring.jpa.hibernate.ddl-auto = update
